@@ -51,6 +51,8 @@
 - Enforce the prohibition on using gretl command words as
   names for variables
 - Script editing window: add an "Open" button
+- New function psdroot: find the Cholesky-type root of a
+  positive semidefinite (and possibly singular) matrix
 
 1/23/2008 version 1.8.0
 - Fix bug: crash in "Add random variable" dialog
